tree-sitter-pipeql/test/corpus/pipeline.txt
==================
Simple pipeline
==================

from users
---

(statement
  (pipeline
    (source
      (identifier)
    )
  )
)

==================
Full pipeline
==================

from orders | join customers on orders.customer_id == customers.id | filter orders.status == 'active' and orders.total >= $min | group [customer_id, region] (total = sum(orders.total), cnt = count(*)) | filter total > $threshold | select [customer_id, region, total, cnt] | sort [total desc, customer_id asc] | take 10
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (join_step
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (literal
                              (string)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (parameter
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (group_step
        (group_spec
          (expression
            (or_expression
              (and_expression
                (not_expression
                  (comparison
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (expression
            (or_expression
              (and_expression
                (not_expression
                  (comparison
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (aggregate
            (identifier)
            (identifier)
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (aggregate
            (identifier)
            (identifier)
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (star)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (parameter
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (select_step
        (select_list
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (sort_step
        (sort_item
          (expression
            (or_expression
              (and_expression
                (not_expression
                  (comparison
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
        (sort_item
          (expression
            (or_expression
              (and_expression
                (not_expression
                  (comparison
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (take_step
        (number)
      )
    )
  )
)

==================
Parameters and operators
==================

from events | filter not (level in ['error', 'warn']) and user_id is not null | derive [double = price * 2] | select [user_id, double as dbl] | skip 20
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (not_expression
                  (comparison
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (parenthesized
                              (expression
                                (or_expression
                                  (and_expression
                                    (not_expression
                                      (comparison
                                        (in_expression
                                          (additive
                                            (multiplicative
                                              (unary
                                                (primary
                                                  (column_ref
                                                    (identifier)
                                                  )
                                                )
                                              )
                                            )
                                          )
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (not_expression
                                                  (comparison
                                                    (additive
                                                      (multiplicative
                                                        (unary
                                                          (primary
                                                            (literal
                                                              (string)
                                                            )
                                                          )
                                                        )
                                                      )
                                                    )
                                                  )
                                                )
                                              )
                                            )
                                          )
                                          (expression
                                            (or_expression
                                              (and_expression
                                                (not_expression
                                                  (comparison
                                                    (additive
                                                      (multiplicative
                                                        (unary
                                                          (primary
                                                            (literal
                                                              (string)
                                                            )
                                                          )
                                                        )
                                                      )
                                                    )
                                                  )
                                                )
                                              )
                                            )
                                          )
                                        )
                                      )
                                    )
                                  )
                                )
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
              (not_expression
                (comparison
                  (is_expression
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (derive_step
        (assignment_list
          (assignment
            (identifier)
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                          (unary
                            (primary
                              (literal
                                (number)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (select_step
        (select_list
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
            (identifier)
          )
        )
      )
    )
    (step
      (skip_step
        (number)
      )
    )
  )
)

==================
Comments are preserved
==================

-- leading comment
from users -- inline
| filter age > 21
---

(statement
  (line_comment)
  (pipeline
    (source
      (identifier)
    )
    (line_comment)
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (literal
                              (number)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

==================
Newline-separated steps
==================

from t
filter a == 1
select [a]
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (literal
                              (number)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (select_step
        (select_list
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

==================
Join with explicit type
==================

from orders | join left customers on orders.customer_id == customers.id | take 5
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (join_step
        (identifier)
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (column_ref
                              (identifier)
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (take_step
        (number)
      )
    )
  )
)

==================
Bare identifiers
==================

from users | filter age >= 18 | select [name]
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (literal
                              (number)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (select_step
        (select_list
          (select_item
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (column_ref
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

==================
Insert statement
==================

into notes | insert [title = $t, is_pinned = 0]
---

(statement
  (insert_statement
    (identifier)
    (assignment_list
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (parameter
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (literal
                            (number)
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

==================
Update pipeline
==================

from notes | filter id == $id | update [title = $t]
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (parameter
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (update_step
        (assignment_list
          (assignment
            (identifier)
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (parameter
                                (identifier)
                              )
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

==================
Delete pipeline
==================

from notes | filter id == $id or is_archived == 1 | delete
---

(statement
  (pipeline
    (source
      (identifier)
    )
    (step
      (filter_step
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (parameter
                              (identifier)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                  (comparison_rest
                    (additive
                      (multiplicative
                        (unary
                          (primary
                            (literal
                              (number)
                            )
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (step
      (delete_step)
    )
  )
)

==================
Table statement
==================

table notes [id int primary auto, title string not null, is_pinned bool default 0, created_at timestamp default current_timestamp]
---

(statement
  (table_statement
    (identifier)
    (column_def
      (identifier)
      (column_type)
      (column_modifier)
      (column_modifier)
    )
    (column_def
      (identifier)
      (column_type)
      (column_modifier)
    )
    (column_def
      (identifier)
      (column_type)
      (column_modifier
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (literal
                            (number)
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
    (column_def
      (identifier)
      (column_type)
      (column_modifier
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (column_ref
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)

==================
Multiline insert
==================

into notes
| insert [
    title = $t,
    is_pinned = 0
  ]
---

(statement
  (insert_statement
    (identifier)
    (assignment_list
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (parameter
                            (identifier)
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (literal
                            (number)
                          )
                        )
                      )
                    )
                  )
                )
              )
            )
          )
        )
      )
    )
  )
)


==================
Upsert statement
==================

into users | upsert [id = $id, name = $name] | conflict [id] | do update [name = $name]
---

(statement
  (upsert_statement
    (identifier)
    (assignment_list
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (parameter
                            (identifier))))))))))))
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (parameter
                            (identifier)))))))))))))
    (identifier_list
      (identifier))
    (assignment_list
      (assignment
        (identifier)
        (expression
          (or_expression
            (and_expression
              (not_expression
                (comparison
                  (additive
                    (multiplicative
                      (unary
                        (primary
                          (parameter
                            (identifier)))))))))))))))

==================
Union statement
==================

from active_users | select [id, name]
| union all
from archived_users | select [id, name]
---

(statement
  (union_statement
    (pipeline
      (source
        (identifier))
      (step
        (select_step
          (select_list
            (select_item
              (expression
                (or_expression
                  (and_expression
                    (not_expression
                      (comparison
                        (additive
                          (multiplicative
                            (unary
                              (primary
                                (column_ref
                                  (identifier))))))))))))
            (select_item
              (expression
                (or_expression
                  (and_expression
                    (not_expression
                      (comparison
                        (additive
                          (multiplicative
                            (unary
                              (primary
                                (column_ref
                                  (identifier))))))))))))))))
    (pipeline
      (source
        (identifier))
      (step
        (select_step
          (select_list
            (select_item
              (expression
                (or_expression
                  (and_expression
                    (not_expression
                      (comparison
                        (additive
                          (multiplicative
                            (unary
                              (primary
                                (column_ref
                                  (identifier))))))))))))
            (select_item
              (expression
                (or_expression
                  (and_expression
                    (not_expression
                      (comparison
                        (additive
                          (multiplicative
                            (unary
                              (primary
                                (column_ref
                                  (identifier))))))))))))))))))

==================
Delete all escape hatch
==================

from users | delete all

--------------------------------------------------------------------------------

(statement
  (pipeline
    (source
      (identifier))
    (step
      (delete_step))))

==================
Update all escape hatch
==================

from users | update all [name = $n]

--------------------------------------------------------------------------------

(statement
  (pipeline
    (source
      (identifier))
    (step
      (update_step
        (assignment_list
          (assignment
            (identifier)
            (expression
              (or_expression
                (and_expression
                  (not_expression
                    (comparison
                      (additive
                        (multiplicative
                          (unary
                            (primary
                              (parameter
                                (identifier)))))))))))))))))
